--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,12 @@
 }
 
 .dropdown-parent{
-    color: red;
-    text-align: center;
-    height: 50px;
-    margin: 0px  0px 0px 0px;
-    position: static;
+    color: #ffffff;
+    font-size: 3em;
+    text-align: left;
+    margin: 0% 0% 0% 5%;
+    position: relative;
+    width: auto;
 
 }
 
@@ -22,11 +23,16 @@ body {
 
 .dropdown {
     visibility: hidden;
+    list-style-type: none;
+    min-width: 500px;
+    font-size: 1em;
     opacity: 0;
-    margin:  0px 0px 0px 0px;
+    text-align: left;
+    margin: 0% 0% 0% 5%;
+    padding: 0em;
+    /*margin:  0px 0px 0px 0px;*/
     position: relative;
-    width: 100%;
-
+    width: auto;
     transform: translateZ(0%);
     transform: translateY(50%);
     transition: all 0.5s ease 0s, visibility 0s linear 0.5s;
@@ -41,13 +47,14 @@ body {
 
 .menu-item {
     display: inline;
-    list-style-type: none;
-    margin-right: 2em;
-    margin-left: 2em;
+    margin-right: 3em;
+    margin-left: 0em;
+    padding: 0em;
     position: relative;
 }
 
 .menu-link, .menu-link:hover, .menu-link:focus {
+    white-space: nowrap;
     text-decoration: none;
     color: #aaf;
     text-shadow: none;
