--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,10 @@
     src: url("../font/Molengo-Regular.ttf");
 }
 
-.dropdown-parent{
+.heading{
     color: #ffffff;
     font-size: 3em;
-    text-align: left;
+    text-align: center;
     margin: 0% 0% 0% 5%;
     position: relative;
     width: auto;
@@ -21,24 +21,34 @@ body {
     background-attachment: fixed;
 }
 
+.fa {
+    color: white;
+    margin: 0em 2em;
+    position: relative;
+}
+
+
 .dropdown {
     visibility: hidden;
     list-style-type: none;
     min-width: 500px;
-    font-size: 1em;
+    font-size: 1.2em;
     opacity: 0;
     text-align: left;
-    margin: 0% 0% 0% 5%;
+    margin: 0em 2em;
     padding: 0em;
     /*margin:  0px 0px 0px 0px;*/
     position: relative;
+    top: -1em;
+    left: 2em;
     width: auto;
     transform: translateZ(0%);
-    transform: translateY(50%);
+    transform: translateY(0%);
+    transform: translateX(-10%);
     transition: all 0.5s ease 0s, visibility 0s linear 0.5s;
 }
 
-.dropdown:hover,.dropdown-parent:hover + .dropdown {
+.dropdown:hover,.fa:hover + .dropdown {
     visibility: visible;
     opacity: 1;
     transform: translateX(0%);
@@ -69,6 +79,7 @@ body {
     color: #fff;
     text-shadow: -1px 1px 8px #ffc, 1px -1px 8px #fff;
 }
+
 
 #planet {
     width: 45%;
