--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
     margin: 0% 0% 0% 0%;
     position: relative;
     width: auto;
+    background-color: yellow;
 
 }
 
@@ -27,7 +28,8 @@ body {
     min-width: 1000px;
     width: 100%;
     display: inline-block;
-    
+    background-color: red;
+
 }
 
 .compass {
@@ -35,6 +37,16 @@ body {
     height: auto;
     margin: 1% 0% 0% 5%;
     float: left;
+    background-color: green;
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition: transform .8s ease-in-out;
+
+}
+
+.compass:hover{
+    transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    transition-delay: 0s;
 }
 
 
@@ -51,10 +63,11 @@ body {
     position: relative;
     left: -50px;
     transition: all 0.5s ease 0s, visibility 0s linear 0.5s;
+    background-color: blue;
 }
 
 
-.dropdown:hover,.compass:hover + .dropdown {
+.dropdown:hover, .compass:hover + .dropdown {
     visibility: visible;
     opacity: 1;
     transform: translateX(50px);
