--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,6 @@ body {
     min-width: 1000px;
     width: 100%;
     display: inline-block;
-    background-color: red;
 
 }
 
@@ -37,17 +36,19 @@ body {
     height: auto;
     margin: 1% 0% 0% 5%;
     float: left;
-    background-color: green;
     -webkit-transition: -webkit-transform .8s ease-in-out;
-    transition: transform .8s ease-in-out;
+    transition: transform .4s ease-in-out;
+    transform: rotate(90deg);
+    z-index: 1;
 
 }
 
-.compass:hover{
-    transform: rotate(270deg);
-    -webkit-transform: rotate(270deg);
+.slider:hover .compass {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
     transition-delay: 0s;
 }
+
 
 
 .dropdown {
@@ -63,15 +64,15 @@ body {
     position: relative;
     left: -50px;
     transition: all 0.5s ease 0s, visibility 0s linear 0.5s;
-    background-color: blue;
+    z-index: 0;
 }
 
 
-.dropdown:hover, .compass:hover + .dropdown {
+.slider:hover .dropdown {
     visibility: visible;
     opacity: 1;
     transform: translateX(50px);
-    transition-delay: 0s;
+    transition-delay: 0.1s;
 }
 
 
