--- a/css/main.css
+++ b/css/main.css
@@ -36,15 +36,23 @@ body {
 .compass {
     width: 50px;
     height: auto;
-    margin: 1% 0% 0% 5%;
-    float: left;
     -webkit-transition: 0.4s ease-in-out;
     -moz-transition: 0.4 ease-in-out;
     -o-transition: 0.4 ease-in-out;
     transition: 0.4s ease-in-out;
     transform: rotate(90deg);
-    z-index: 1;
+    
 
+}
+
+.menu {
+    width: 50px;
+    margin: 1% 0% 0% 5%;
+    float: left;
+    z-index: 1;
+    text-align: center;
+    font-size: 0.6em;
+    text-transform: uppercase;
 }
 
 .slider:hover .compass {
@@ -103,6 +111,10 @@ body {
     color: #fff;
     text-shadow: -1px 1px 8px #ffc, 1px -1px 8px #fff;
     font-weight: bold;
+}
+
+.menu {
+    float: left;
 }
 
 .main-text {
