event page css fixed header etc

--- a/css/event.css
+++ b/css/event.css
@@ -25,6 +25,7 @@
     height:170px;
     padding: 0;
     z-index: 100;
+
 }
 
 .trooper {
@@ -58,6 +59,7 @@
     vertical-align: center;
     line-height: 90px;
     height:90px;
+    background-color: #0d0d0d;
 }
 
 body {
@@ -88,7 +90,7 @@ body {
 
 .menu {
     width: 50px;
-    margin: 0 0 0 90px;
+    margin: 0% 0% 0% 5%;
     float: left;
     z-index: 1;
     text-align: center;
@@ -182,10 +184,25 @@ body {
 
 .main-text {
     position: relative;
-    margin: 180px 0 0 90px;
+    top: 2em;
+    margin: 0 5%;
     display: block;
     width: 40%;
     clear: left;
     font-size: 1em;
     line-height: 2em;
+}
+
+#event-info {
+    clear: both;
+    width: 900px;
+    height: 20000px;
+    margin: auto;
+    margin-top: 0px;
+    position: relative;
+    margin-top: 170px;
+}
+
+.event-image {
+
 }
