more images, started script

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
     z-index: 100;
 }
 
-.trooper {
+#trooper {
     float:right;
     position:relative;
     vertical-align: middle;
@@ -45,7 +45,7 @@
     filter: opacity(25%);
 }
 
-.trooper:hover{
+#trooper:hover{
     -webkit-filter: opacity(100%);
     -moz-filter: opacity(100%);
     -o-filter: opacity(100%);
@@ -209,5 +209,5 @@ input {
     height: 1.5em;
     color: #e6e6e6;
     background: none;
-    
+
 }
