--- a/css/event.css
+++ b/css/event.css
@@ -28,7 +28,7 @@
 
 }
 
-.trooper {
+#trooper {
     float:right;
     position:relative;
     vertical-align: middle;
@@ -46,7 +46,7 @@
     filter: opacity(25%);
 }
 
-.trooper:hover {
+#trooper:hover {
     -webkit-filter: opacity(100%);
     -moz-filter: opacity(100%);
     -o-filter: opacity(100%);
@@ -182,15 +182,15 @@ body {
     float: left;
 }
 
-.main-text {
+.event-text {
     position: relative;
-    top: 2em;
-    margin: 0 5%;
+    margin: 5% 0% 0% 0%;
+    text-align: justify;
     display: block;
-    width: 40%;
+    width: 100%;
     clear: left;
     font-size: 1em;
-    line-height: 2em;
+    line-height: 1.2;
 }
 
 #event-info {
