updated description, img alternative for non-svg browsers

--- a/css/event.css
+++ b/css/event.css
@@ -28,7 +28,7 @@
 
 }
 
-.trooper {
+#trooper {
     float:right;
     position:relative;
     vertical-align: middle;
@@ -46,7 +46,7 @@
     filter: opacity(25%);
 }
 
-.trooper:hover {
+#trooper:hover {
     -webkit-filter: opacity(100%);
     -moz-filter: opacity(100%);
     -o-filter: opacity(100%);
