--- a/css/event.css
+++ b/css/event.css
@@ -25,7 +25,7 @@
 
 }
 
-#trooper {
+.trooper {
     float:right;
     position:relative;
     vertical-align: middle;
@@ -43,7 +43,7 @@
     filter: opacity(25%);
 }
 
-#trooper:hover {
+.trooper:hover{
     -webkit-filter: opacity(100%);
     -moz-filter: opacity(100%);
     -o-filter: opacity(100%);
@@ -200,6 +200,25 @@ body {
     margin-top: 170px;
 }
 
-.event-image {
+.log-in {
+    position: relative;
+    float: right;
+    width: 10%;
+    margin: 0 0.5em 0 0;
+    /*padding: 0.5em 1em 0.5em 1em;*/
+    background: none;
+    border: 2px solid #333333;
+    border-radius: 10px;
+}
 
+
+input {
+    width: 90%;
+    position: relative;
+    margin: 0.2em;
+    border-radius: 10px;
+    border: 2px solid #333333;
+    height: 1.5em;
+    color: #e6e6e6;
+    background: none;
 }
