--- a/css/main.css
+++ b/css/main.css
@@ -218,17 +218,7 @@ input {
     background: none;
 }
 
-
-.endor{
-    width: 400px;
-    height: auto;
-
-}
-
-#image {
-    float: right;
-    position: relative;
-    right: 2em;
-    top: 50px;
-
+#endor-canvas {
+  float: right;
+  margin: -40em 8em 0 0;
 }
