--- a/css/topbar.css
+++ b/css/topbar.css
@@ -7,39 +7,43 @@
 #top-bar {
     width:100%;
     position: fixed;
-    margin-top: 0px;
-    top: 0;
+    /*margin: 0px;*/
+    top: 0px;
     height:170px;
     padding: 0;
     z-index: 100;
     overflow: visible;
 }
 
+
 .title-bar {
     width:100%;
     text-align: center;
-    vertical-align: center;
-    line-height: 90px;
+    top: 0;
+    padding: 0;
+    /*line-height: 70px;*/
     height:90px;
 }
 
 .heading{
     font-weight: lighter;
-    display: inline;
+    display: inline-block;
+    vertical-align: middle;
     color: #ffffff;
     font-size: 3em;
     position: relative;
-    margin: 0 0 0 90px;
+    margin-left: 90px;
+    margin-top: 20px;
+    padding: 0px;
     text-transform: uppercase;
 }
 
-#trooper {
-    float:right;
-    position:relative;
-    vertical-align: middle;
+#logo {
     width: 50px;
-    margin-top: 20px;
     margin-right: 40px;
+    margin-top: 20px;
+    float: right;
+    display: block;
     -webkit-transition: 0.4s ease-in-out 0s;
     -moz-transition: 0.4s ease-in-out 0s;
     -o-transition: 0.4s ease-in-out 0s;
@@ -48,14 +52,31 @@
     -moz-filter: opacity(25%);
     -o-filter: opacity(25%);
     filter: opacity(25%);
+
 }
 
-#trooper:hover{
+#login-hint {
+    font-size: 0.6em;
+    margin-top: 0.9em;
+    padding: 0px;
+    text-transform: uppercase;
+    /*height: 20px;*/
+}
+
+#logo:hover{
     -webkit-filter: opacity(100%);
     -moz-filter: opacity(100%);
     -o-filter: opacity(100%);
     filter: opacity(100%);
 }
+
+#trooper {
+    position:relative;
+    vertical-align: middle;
+    width: 50px;
+    height: 100%;
+}
+
 
 .slider {
     width: 100%;
