--- a/css/topbar.css
+++ b/css/topbar.css
@@ -194,7 +194,7 @@
     background: none;
     border: 2px solid #333333;
     border-radius: 10px;
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 
 input {
