--- a/css/topbar.css
+++ b/css/topbar.css
@@ -18,7 +18,7 @@
 
 .title-bar {
     width:100%;
-    text-align: center;
+    /*text-align: center;*/
     top: 0;
     padding: 0;
     /*line-height: 70px;*/
@@ -31,11 +31,16 @@
     font-weight: lighter;
     display: inline-block;
     vertical-align: middle;
+    width: 12em;
+    text-align: center;
     color: #ffffff;
     font-size: 3em;
-    position: relative;
-    margin-left: 90px;
+    position: fixed;
+    /*margin-right: 180px;*/
     margin-top: 20px;
+    left: 50%;
+    margin-left: -6em;
+    /*margin-right: auto;*/
     padding: 0px;
     text-transform: uppercase;
 }
@@ -107,7 +112,7 @@
 
 .menu {
     width: 50px;
-    margin: 0 0 0 90px;
+    margin: 20px 0 0 90px;
     float: left;
     z-index: 1;
     text-align: center;
@@ -126,7 +131,7 @@
 
 .menu-link {
     margin: 0em 2em 0em 0em;
-    display: inline;222
+    display: inline;
     position: relative;
     text-transform: uppercase;
     -webkit-transition: 250ms linear 0s;
@@ -178,7 +183,7 @@
     float: left;
     font-size: 1.2em;
     opacity: 0;
-    margin: 0% 0 0 0%;
+    margin: 20px 0px 0px 0px;
     line-height: 50px;
     width: 25em;
     min-width: 700px;
@@ -245,6 +250,7 @@ input[type=submit] {
     padding: 0;
 }
 
+/*Merge into the input type submit block?*/
 a.button {
     display: block;
     font-size: 15px;
