--- a/css/topbar.css
+++ b/css/topbar.css
@@ -4,12 +4,22 @@
     font-weight: lighter;
 }
 
+body {
+    font-family: "Raleway";
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    background-color: #0d0d0d;
+    min-width: 900px;
+}
+
 #top-bar {
     width:100%;
     position: fixed;
     /*margin: 0px;*/
     top: 0px;
-    height:170px;
+    height:90px;
     padding: 0;
     z-index: 100;
     overflow: visible;
@@ -23,7 +33,9 @@
     padding: 0;
     /*line-height: 70px;*/
     height:90px;
-    background-color: #0d0d0d;
+    /*background-color: #0d0d0d;*/
+    background-color: purple;
+
 }
 
 
@@ -142,7 +154,7 @@
     transition: 250ms linear 0s;
     text-decoration: none;
     white-space: nowrap;
-    color: #aaf;
+    color: #ffffff;
 }
 
 .menu-link:hover, .menu-link:focus {
@@ -207,9 +219,10 @@
     position: relative;
     text-align: center;
     line-height: 30px;
+    clear: both;
     float: right;
     width: 10%;
-    margin: 0 0.5em 0 0;
+    margin: 20px 20px 0 0;
     /*padding: 0.5em 1em 0.5em 1em;*/
     background: none;
     border: 2px solid #333333;
@@ -229,18 +242,39 @@ input {
 }
 
 input[type=submit] {
-    width: 95%;
+    width: 15em;
+    height: 3.5em;
     font-family: "Raleway";
     font-weight: bold;
-    color: #0d0d0d;
-    background-color:#ccc;
-    border:0 none;
+    color: #ffffff;
+    background-color: transparent;
+    -webkit-transition: 0.6s ease-in-out 0s;
+    -moz-transition: 0.6s ease-in-out 0s;
+    -o-transition: 0.6s ease-in-out 0s;
+    transition: 0.6s ease-in-out 0s;
+
+    /*background: rgba(255, 255, 255, 0);*/
+    text-transform: uppercase;
+
+    /*border:0 solid white;*/
     cursor:pointer;
+    border: 1px solid #333333;
+    margin: 3px auto;
+
     -webkit-border-radius: 5px;
     border-radius: 5px;
     font-size: 15px;
-    height: 20px;
+    /*background: none;*/
+
+
 }
+
+
+input[type=submit]:hover {
+    background-color: #d3d3d3;
+    color: #000000;
+}
+
 
 .form-indicator {
     font-size: 0.7em;
@@ -253,17 +287,32 @@ input[type=submit] {
 }
 
 /*Merge into the input type submit block?*/
-a.button {
+#sign-up {
+    width: 15em;
+    height: 3.5em;
     display: block;
     font-size: 15px;
+    line-height: 3.5em;
     text-align: center;
+    text-transform: uppercase;
     -webkit-appearance: button;
     -moz-appearance: button;
     appearance: button;
     text-decoration: none;
-    color: #0d0d0d;
+    color: #ffffff;
+    -webkit-border-radius: 5px;
     border-radius: 5px;
-    margin: 0px 3px 10px 3px;
-    line-height: 20px;
-    background-color: #ccc;
+    border: 1px solid #333333;
+    margin: 3px auto;
+    /*background: rgba(255, 255, 255, 0);*/
+    background-color: green;
+    -webkit-transition: 0.6s ease-in-out 0s;
+    -moz-transition: 0.6s ease-in-out 0s;
+    -o-transition: 0.6s ease-in-out 0s;
+    transition: 0.6s ease-in-out 0s;
+    /*background: none;*/
+}
+
+#sign-up:hover {
+    background-color: #FF6600;
 }
