--- a/css/topbar.css
+++ b/css/topbar.css
@@ -33,8 +33,7 @@ body {
     padding: 0;
     /*line-height: 70px;*/
     height:90px;
-    /*background-color: #0d0d0d;*/
-    background-color: purple;
+    background-color: #0d0d0d;
 
 }
 
