--- a/css/profile.css
+++ b/css/profile.css
@@ -1,41 +1,123 @@
-body {
-    font-family: "Raleway";
-    font-weight: bold;
-    color: #ffffff;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    background-color: #0d0d0d;
-    background-position: left top;
-    background-attachment: fixed;
-    min-width: 900px;
-}
-
-
-.profile-pic{
+/*.profile-pic{
   position: relative;
   top: 10em;
+}*/
+
+.profile-info {
+    width: 80%;
+    margin: 0 auto;
+    /*background-color: red;*/
 }
 
 .pic-circle {
-  display: block;
-  position: absolute;
+  /*display: block;
+
   height: 30em;
   width: 30em;
   left: 40%;
-  float: left;
+  float: left;*/
+  width: 20em;
+  position: absolute;
+  left: 50%;
+  margin-top: 10em;
+  margin-left: -10em;
 }
 
 
 .pic {
-  position: absolute;
-  display: block;
-  height: 20em;
-  width: 20em;
-  left: 40%;
-  margin: 50px 10px 10px 80px;
-  float: left;
+    width: 12em;
+    position: absolute;
+    left: 50%;
+    margin-top: 12em;
+    margin-left: -6em;
 }
 
-.name {
-  color: white;
- }
+
+.info {
+    position: relative;
+    width: 40%;
+    margin: 0 auto;
+    line-height: 2.5em;
+    padding: 1em;
+    top: 32em;
+    display: block;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #333333;
+    /*background-color: red;*/
+
+}
+
+.info-line {
+    width: 100%;
+    height: 2.5em;
+    display: inline-block;
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
+    margin: 0.25em 0;
+    /*background-color: green;*/
+}
+
+.info-type {
+    vertical-align: middle;
+    /*display: inline;*/
+    line-height: 2.5em;
+    height: 2.5em;
+}
+
+.box {
+    float: right;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #333333;
+    width: 60%;
+    height: 2.5em;
+    display: block;
+    /*background-color: purple;*/
+}
+
+.button-outfit {
+    display: block;
+    line-height: 3.5em;
+    margin: 3px auto;
+    width: 40%;
+    font-size: 15px;
+    color: #ffffff;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #333333;
+    -webkit-transition: 0.6s ease-in-out 0s;
+    -moz-transition: 0.6s ease-in-out 0s;
+    -o-transition: 0.6s ease-in-out 0s;
+    transition: 0.6s ease-in-out 0s;
+    text-transform: uppercase;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.button-outfit:hover {
+    background-color: #d3d3d3;
+    color: #000000;
+}
+
+.button-outfit:active {
+    background-color: green;
+}
+
+
+.costume-info{
+    height: 0em;
+    opacity: 0;
+    width: 90%;
+    margin: 0 auto;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #333333;
+
+}
+
+.footer {
+    top: 100em;
+    position: absolute;
+}
