--- a/css/profile.css
+++ b/css/profile.css
@@ -48,6 +48,32 @@
 
 }
 
+#costume-arrow {
+    height: 3.5em;
+    /*bottom: 5em;
+    left: 50%;*/
+    /*margin-left: -50px;*/
+    float: right;
+    z-index: 0;
+    -webkit-transition: 0.4s ease-in-out;
+    -moz-transition: 0.4s ease-in-out;
+    -o-transition: 0.4s ease-in-out;
+    transition: 0.4s ease-in-out;
+    /*transform: rotate(-90deg);*/
+
+}
+
+.rotation {
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    transition-delay: 0s;
+}
+
+#button-container{
+    margin-top: 2em;
+    height: 3.5em;
+}
+
 .info-line {
     width: 100%;
     height: 2.5em;
@@ -78,9 +104,10 @@
 }
 
 .button-outfit {
-    display: block;
+    display: inline;
     line-height: 3.5em;
-    margin: 3px auto;
+    height: 100%;
+    margin: 0 auto;
     width: 40%;
     font-size: 15px;
     color: #ffffff;
@@ -108,9 +135,12 @@
 
 .costume-info{
     height: 0em;
+    position: relative;
     opacity: 0;
-    width: 90%;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0em auto;
+    margin-bottom: 2em;
+    top: 2em;
     -webkit-border-radius: 5px;
     border-radius: 5px;
     border: 1px solid #333333;
