--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,22 @@
 .main-text {
     position: relative;
-    margin: 180px 0 0 90px;
-    padding-left: 0.5em;
-    display: inline;
+    margin: 10em 0 0 5%;
+    padding-left: 0.8em;
+    display: inline-block;
     width: 40%;
-    height: 20em;
-    clear: both;
+    height: 35em;
+    /*clear: both;*/
     float: left;
-    font-size: 1.2em;
+    font-size: 20px;
     line-height: 2em;
     text-align: justify;
     text-justify: inter-word;
     overflow: scroll;
+    /*background-color: red;*/
 }
 
 
-#endor-canvas {
+/*#endor-canvas {
     clear: both;
     float: right;
     margin: -45em auto 0 auto;
@@ -31,25 +32,41 @@
     float: right;
     margin: 0 auto 0 auto;
     display: inline-block;
-}
+}*/
 
 
 .planet-side {
     position: relative;
-    clear: both;
+    display: inline-block;
     float: right;
     width: 50%;
-    height: auto;
+    height: 35em;
+    margin: 10em auto 0 auto;
+    /*background-color: green;*/
+    font-size: 20px;
+
 }
 
 
 .activate {
-    display: inline-block;
-    align-content: center;
+    position: relative;
+    margin: -3.5em auto 0 auto;
+    width: 100%;
+    /*background-color: red;*/
+    text-align: center;
+    top: 100%;
+}
+
+
+#activate-button {
+    position: relative;
+    /*display: inline;*/
     line-height: 3.5em;
-    margin: 0 auto 0 auto;
+    /*margin: 0 auto;*/
+    margin-left: auto;
     width: 50%;
-    font-size: 15px;
+    height: 100%;
+    font-size: 20px;
     color: #ffffff;
     -webkit-border-radius: 5px;
     border-radius: 5px;
@@ -65,14 +82,6 @@
 
 }
 
-.activate:hover {
+#activate-button:hover {
     background-color: green;
-}
-
-
-#image {
-    float: right;
-    position: relative;
-    right: 2em;
-    top: 50px;
 }
