--- a/css/tickets.css
+++ b/css/tickets.css
@@ -7,7 +7,7 @@
     /*height: auto;*/
     /*clear: both;*/
     /*padding: 20px;*/
-    z-index: 50;
+    z-index: 10;
     width: 100%;
     /*margin: -1px 0 -1px 0;*/
     display: block;
@@ -29,10 +29,10 @@ ul {
 
 .text {
     width: 50%;
-    /*background-color: red;*/
     /*display: inline;*/
     /*float: left;*/
     margin: 0;
+    z-index: 10;
 }
 
 
@@ -130,7 +130,7 @@ a.sign-in:hover {
 }
 
 #footer-container{
-    height:800px;
+    height:30em;
 }
 
 
@@ -138,17 +138,19 @@ a.sign-in:hover {
 #forest-back{
     position: fixed;
     width: 80%;
-    z-index: -1;
+    z-index: -2;
     margin: 0;
 }
 
 .frosted{
     background: rgba(255, 255, 255, 0.6);
     color: black;
+    z-index: 10;
 }
 
 .package{
     height: 400px;
+    z-index: 10;
     /*background-color: red;*/
 }
 
@@ -159,5 +161,10 @@ a.sign-in:hover {
     left: 50%;
     margin-left: -50px;
     position: fixed;
-    z-index: 0;
+    z-index: -1;
+}
+
+footer {
+    top: 33em;
+    margin: 0;
 }
