--- a/css/main.css
+++ b/css/main.css
@@ -22,27 +22,41 @@
     margin: -45em auto 0 auto;
     background: none;
     overflow: visible;
-}
+}*/
+
 
 #static-endor {
     width: 50%;
     height: auto;
+    /*position: relative;*/
     position: relative;
-    clear: both;
+    top: 12em;
+    /*float: right;*/
+    /*margin: 0 auto 0 auto;*/
+    /*display: inline-block;*/
+    background-color: red;
+    margin: 0 auto;
+}
+
+
+#endor-canvas {
+    width: 90%;
+    height: 90%;
     float: right;
-    margin: 0 auto 0 auto;
-    display: inline-block;
-}*/
+    position: relative;
+    bottom: 49em;
+}
 
 
 .planet-side {
     position: relative;
     display: inline-block;
+    text-align: center;
     float: right;
     width: 50%;
-    height: 35em;
-    margin: 10em auto 0 auto;
-    /*background-color: green;*/
+    height: 10em;
+    margin: 0 auto;
+    /*background-color: purple;*/
     font-size: 20px;
     z-index: 0;
 
@@ -50,20 +64,19 @@
 
 
 .activate {
-    position: relative;
-    margin: -3.5em auto 0 auto;
+    position: absolute;
+    margin: -5em 0 0 auto;
     width: 100%;
-    /*background-color: red;*/
+    font-size: 20px;
+    top: 45em;
+    /*background-color: green;*/
     text-align: center;
-    top: 100%;
 }
 
 
 #activate-button {
     position: relative;
-    /*display: inline;*/
     line-height: 3.5em;
-    /*margin: 0 auto;*/
     margin-left: auto;
     width: 50%;
     height: 100%;
