--- a/css/topbar.css
+++ b/css/topbar.css
@@ -324,6 +324,7 @@ input[type=submit]:hover {
 footer {
     position: relative;
     clear: both;
+    bottom: 0;
     width: 100%;
     font-size: 12px;
     background-color: #0d0d0d;
@@ -360,15 +361,3 @@ footer a:hover {
     width: 50%;
 }
 
-
-
-
-
-
-/*body.loading {
-    overflow: hidden;
-}
-
-body.loading .modal {
-    display: block;
-}*/
