--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,10 @@ html,body {
 
 
 #scroll-prompt {
-    position: fixed;
-    width: 100px;
-    /*bottom: 5em;*/
+    position: relative;
+    bottom: 5em;
     font-size: 25px;
-
+    line-height: 1.5em;
     opacity: 1;
 }
 
@@ -184,4 +183,10 @@ html,body {
 
 #activate-button:hover {
     background-color: green;
+}
+
+
+footer {
+    font-size: 12px;
+    top: 5em;
 }
