--- a/css/profile.css
+++ b/css/profile.css
@@ -44,6 +44,7 @@
     -webkit-border-radius: 5px;
     border-radius: 5px;
     border: 1px solid #333333;
+    min-width: 500px;
     /*background-color: red;*/
 
 }
