--- a/css/topbar.css
+++ b/css/topbar.css
@@ -41,7 +41,6 @@ body {
 
 }
 
-
 .heading{
     font-weight: lighter;
     display: inline-block;
@@ -224,7 +223,7 @@ body {
     line-height: 30px;
     clear: both;
     float: right;
-    width: 10%;
+    width: 12%;
     margin: 20px 20px 0 0;
     /*padding: 0.5em 1em 0.5em 1em;*/
     background: none;
@@ -273,6 +272,11 @@ input[type=submit] {
 }
 
 
+input[type=submit]:focus {
+    outline: none;
+}
+
+
 input[type=submit]:hover {
     background-color: #d3d3d3;
     color: #000000;
@@ -314,6 +318,10 @@ input[type=submit]:hover {
     -o-transition: 0.6s ease-in-out 0s;
     transition: 0.6s ease-in-out 0s;
     /*background: none;*/
+}
+
+#logoutbutton:focus {
+    outline: none;
 }
 
 #sign-up:hover {
@@ -359,3 +367,62 @@ footer a:hover {
     width: 50%;
 }
 
+
+.button {
+    width: 90%;
+    font-size: 15px;
+}
+
+#profilebutton, #logoutbutton {
+    width: 95%;
+    height: 3.5em;
+    display: block;
+    font-size: 15px;
+    line-height: 3.5em;
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: #ffffff;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #333333;
+    margin: 3px auto;
+    -webkit-transition: 0.3s ease-in-out 0s;
+    -moz-transition: 0.3s ease-in-out 0s;
+    -o-transition: 0.3s ease-in-out 0s;
+    transition: 0.3s ease-in-out 0s;
+}
+
+#logoutbutton {
+    background-color: green;
+}
+
+#logoutbutton:hover {
+    background-color: red;
+}
+
+#logoutbutton:focus {
+    outline: none;
+}
+
+#profilebutton {
+    background-color: transparent;
+    color: white;
+}
+
+#profilebutton:hover {
+    background-color: white;
+    color: black;
+}
+
+#profilebutton:focus {
+    outline: none;
+}
+
+#username-word {
+    font-size: 18px;
+    line-height: 3.5em;
+}
