--- a/css/tickets.css
+++ b/css/tickets.css
@@ -73,6 +73,7 @@ ul {
     display: block;
     line-height: 3.5em;
     margin: 3px auto;
+    position: relative;
     width: 50%;
     font-size: 15px;
     color: #ffffff;
@@ -139,6 +140,33 @@ ul {
 
 #footer-container{
     height:30em;
+}
+
+.procured {
+    font-size: 15px;
+    line-height: 3.5em;
+    height: 3.5em;
+    width: 50%;
+    margin: 2em auto 0em auto;
+    text-align: left;
+}
+
+.tick {
+    height: 3.5em;
+    margin: 0;
+}
+
+.purchased-text {
+    font-size: 15px;
+    height: 3.5em;
+    line-height: 3.5em;
+    background-color: purple;
+}
+
+.purchased-container{
+    margin-top: 2em;
+    height: 3.5em;
+
 }
 
 
