--- a/css/tickets.css
+++ b/css/tickets.css
@@ -143,32 +143,31 @@ ul {
 }
 
 .procured {
+    position: relative;
     font-size: 15px;
     line-height: 3.5em;
     height: 3.5em;
     width: 50%;
     margin: 2em auto 0em auto;
     text-align: left;
+    min-width: 400px;
+    opacity: 0;
 }
 
 .tick {
     height: 3.5em;
-    margin: 0;
+    margin: 0 0 0 1em;
+    float: left;
 }
 
 .purchased-text {
     font-size: 15px;
     height: 3.5em;
     line-height: 3.5em;
-    background-color: purple;
+    /*width: 50%;*/
+    float: left;
+    margin-left: 3em;
 }
-
-.purchased-container{
-    margin-top: 2em;
-    height: 3.5em;
-
-}
-
 
 
 #forest-back{
